# prost-protovalidate

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: buf-validate-schema.yml  ci.yml  publish.yml
crates/prost-protovalidate/: Cargo.toml  README.md
crates/prost-protovalidate-build/: Cargo.toml  README.md
crates/prost-protovalidate-build/src/: backend.rs  codegen.rs  lib.rs  message.rs  naming.rs
crates/prost-protovalidate-build/src/rules/: bool_rules.rs  bytes.rs  duration.rs  enum_rules.rs  field_mask.rs  map.rs  mod.rs  number.rs  repeated.rs  string.rs  timestamp.rs
crates/prost-protovalidate-build/tests/: buffa_backend.rs  capability_routing.rs  invalid_regex_skip.rs  nested_codegen_modes.rs
crates/prost-protovalidate-conformance/: Cargo.toml  build.rs  expected_failures.yaml
crates/prost-protovalidate-conformance/proto/buf/validate/conformance/harness/: harness.proto
crates/prost-protovalidate-conformance/src/: main.rs
crates/prost-protovalidate-tests/: Cargo.toml  build.rs
crates/prost-protovalidate-tests-buffa/: Cargo.toml  build.rs
crates/prost-protovalidate-tests-buffa-bridge/: Cargo.toml  build.rs
crates/prost-protovalidate-tests-buffa-bridge/proto/: bridge.proto
crates/prost-protovalidate-tests-buffa-bridge/src/: lib.rs
crates/prost-protovalidate-tests-buffa-bridge/tests/: bridge_parity.rs
crates/prost-protovalidate-tests-buffa/src/: lib.rs
crates/prost-protovalidate-tests-buffa/tests/: buffa_shapes.rs  parity_sweep.rs  registry_coverage.rs
crates/prost-protovalidate-tests/proto/: parity.proto
crates/prost-protovalidate-tests/src/: lib.rs  sweep.rs
crates/prost-protovalidate-tests/tests/: parity.rs  parity_sweep.rs  registry_coverage.rs
crates/prost-protovalidate-types/: Cargo.toml  README.md  SYNC.md  buf.yaml  build.rs
crates/prost-protovalidate-types/bufsync/: placeholder.proto
crates/prost-protovalidate-types/proto/buf/validate/: validate.proto
crates/prost-protovalidate-types/src/: constraints.rs  lib.rs  proto.rs  rules_meta.rs
crates/prost-protovalidate/benches/: validate.rs
crates/prost-protovalidate/src/: bridge.rs  config.rs  error.rs  formats.rs  lib.rs  time.rs  tonic.rs  validator.rs  validators.rs  violation.rs
crates/prost-protovalidate/src/validator/: builder.rs  descriptor_set.rs  editions.rs  formats.rs  lookups.rs  resolve.rs  wire.rs
crates/prost-protovalidate/src/validator/evaluator/: any.rs  cel.rs  embedded.rs  enum_check.rs  field.rs  list.rs  map.rs  message.rs  mod.rs  oneof.rs  value.rs  wrapper.rs
crates/prost-protovalidate/src/validator/rules/: bool.rs  bytes.rs  duration.rs  enum_rules.rs  field_mask.rs  map_rules.rs  mod.rs  number.rs  repeated.rs  string.rs  timestamp.rs
crates/prost-protovalidate/tests/: no_cel_compilation_errors.rs  tonic_integration.rs
scripts/: update_expected_failures.go
