[package]
name = "prost-protovalidate-build"
description = "Build-time code generator for zero-cost Protocol Buffer validation using buf.validate rules"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/prost-protovalidate-build"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-build = { workspace = true }
prost-reflect = { workspace = true }
prost-reflect-build = { workspace = true }
prost-protovalidate-types = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
