[package]
name = "prost-protovalidate-tests-buffa-bridge"
description = "Parity tests for the buffa runtime_bridge mode (bridged Validate vs runtime Validator)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
buffa = { workspace = true }
# Generated buffa code may reference `::buffa_types::google::protobuf::*` for
# well-known types; declared so the include compiles regardless of the corpus.
buffa-types = { workspace = true }
# The `runtime_bridge` generated code delegates to the runtime engine, so this
# crate's own build needs `reflect` + `cel` (unlike the standard-only
# `prost-protovalidate-tests-buffa`, which builds slim).
prost-protovalidate = { path = "../prost-protovalidate", version = "=0.6.0", features = [
    "cel",
] }

[build-dependencies]
buffa-build = { workspace = true }
prost-build = { workspace = true }
prost-protovalidate-build = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
prost-reflect = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
