[package]
name = "prost-protovalidate"
description = "Runtime validation for Protocol Buffer messages using buf.validate rules"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/prost-protovalidate"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost-protovalidate-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
cel = { workspace = true }
uriparse = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
