[package]
name = "prost-protovalidate"
description = "Runtime validation for Protocol Buffer messages using buf.validate rules"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/prost-protovalidate"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cel"]
cel = ["dep:cel", "dep:chrono"]
tonic = ["dep:tonic"]
tonic-types = ["tonic", "dep:tonic-types"]

[dependencies]
prost-protovalidate-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, optional = true }
cel = { workspace = true, optional = true }
fluent-uri = { workspace = true }
tonic = { workspace = true, optional = true, default-features = false }
tonic-types = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
prost-build = { workspace = true }

[[bench]]
name = "validate"
harness = false

[lints]
workspace = true
