[package]
name = "prost-protovalidate"
description = "Runtime validation for Protocol Buffer messages using buf.validate rules"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/prost-protovalidate"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cel"]
# Runtime reflection: the descriptor-driven `Validator`, validation filters,
# and `Violation` enrichment/rule-path hydration. Disable for a slim build
# that only carries the `Validate` trait, `Violation`/`ValidationError`, and
# the `validators` helpers consumed by `prost-protovalidate-build` generated
# code — no `prost-reflect` in the dependency graph.
reflect = ["dep:prost-reflect", "prost-protovalidate-types/reflect"]
cel = ["reflect", "dep:cel", "dep:chrono"]
tonic = ["dep:tonic"]
tonic-types = ["tonic", "dep:tonic-types"]

[dependencies]
# Declared explicitly (not via `workspace = true`) so `default-features` can
# be disabled — the `reflect` feature above re-enables the types crate's
# descriptor pool when runtime reflection is compiled in. Cargo forbids
# overriding `default-features` through workspace inheritance.
prost-protovalidate-types = { path = "../prost-protovalidate-types", version = "=0.6.0", default-features = false }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true, optional = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, optional = true }
cel = { workspace = true, optional = true }
fluent-uri = { workspace = true }
tonic = { workspace = true, optional = true, default-features = false }
tonic-types = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
prost-build = { workspace = true }

[[bench]]
name = "validate"
harness = false
required-features = ["cel"]

[lints]
workspace = true
